@@ -14,7 +14,7 @@ module.exports = function (mod, agent, { version, enabled }) {
   if (!enabled) {
     return mod
   }
-  if (!semver.satisfies(version, '>=11.1.0 <14.0.0', { includePrerelease: true })) {
+  if (!semver.satisfies(version, '>=11.1.0 <13.3.0', { includePrerelease: true })) {
     agent.logger.debug('next version %s not supported, skipping', version)
     return mod
   }
