@@ -10,6 +10,8 @@
 #      NODE_OPTIONS=--openssl-legacy-provider ...
 #   See https://github.com/vercel/next.js/issues/30078 for details. There isn't
 #   much value in testing this old Next.js version with newer Node versions.
+# - For the latest version, we guard on the *minor* version, because 13.2 and
+#   13.3 releases have both broken our instrumentation.
 next-11:
   name: next
   versions: '11.1.0 || 11.1.4'
@@ -28,7 +30,7 @@ next-12:
     - "react-dom@^18.2.0"
 next:
   name: next
-  versions: '>=13.0.0 <14'
+  versions: '>=13.0.0 <13.3.0'
   node: '>=14.6.0'
   commands: node ../next.test.js
   peerDependencies:
